Fix alignment

--- a/docs/website/static/css/site.css
+++ b/docs/website/static/css/site.css
@@ -69,6 +69,9 @@ div.example {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 120px;
+    position: absolute;
+    left: 33.333%;
+    
 }
 div.example table {
     margin-top: 15px;
